Revision history for Perl extension Otogiri-Plugin

{{$NEXT}}

0.02 2014-01-15T01:34:05Z

    - support for latest Otogiri
    - document fix

0.01 2013-12-24T01:41:12Z

    - original version
