@@ -2,6 +2,8 @@ Revision history for Perl extension Otogiri-Plugin
 
 {{$NEXT}}
 
+    - add document HOW TO MAKE YOUR PLUGIN
+
 0.02 2014-01-15T01:34:05Z
 
     - support for latest Otogiri
